Base webpage functionality setup

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,27 @@
-<% if (!user) { %>
-	<p>Welcome! Please <a href="/login">log in</a>.</p>
-<% } else { %>
-	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
-<% } %>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Home page</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/index.css">
+</head>
+	<body>
+		<% if (!user) { %>
+			<p id="welcome">Welcome! Please <a href="/login">log in</a>.</p>
+		<% } else { %>
+			<form class="form" action="/run" method="post">
+				<button id="run_script" class="btn btn-lg btn-primary btn-block" type="submit" value="submit">Run Normalize Script</button>
+			</form>
+			<form class="form" action="/logout" method="get">
+				<button id="run_script" class="btn btn-lg btn-primary btn-block" type="submit" value="submit">Logout</button>
+			</form>
+		<% } %>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	    <script src="../js/home.js"></script>
+	</body>
+</html>
+
