--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,24 +4,128 @@
 	<title>Home page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/index.css">
+	<link rel="stylesheet" href="../css/home.css">
 </head>
 	<body>
 		<% if (!user) { %>
 			<p id="welcome">Welcome! Please <a href="/login">log in</a>.</p>
 		<% } else { %>
-			<form class="form" action="/run" method="post">
-				<button id="run_script" class="btn btn-lg btn-primary btn-block" type="submit" value="submit">Run Normalize Script</button>
-			</form>
-			<form class="form" action="/logout" method="get">
-				<button id="run_script" class="btn btn-lg btn-primary btn-block" type="submit" value="submit">Logout</button>
-			</form>
+			<div class="jumbotron">
+		      <div class="container">
+		        <h1 class="display-3">Data Wise Survey Data Normalizer</h1>
+		        <p>Use this website to upload new survey responses to the 
+		        	<a href="https://datastudio.google.com/reporting/1cyLxa1MawmesZauy2ObDZ8-bfxGst4me/page/agpb" target="_blank">Data Wise Dashboard.</a> <b>Important note: </b> Make sure to check the list of surveys that have already been added to the dashboard below. If a survey has already been added, DO NOT run the program to add that survey again. Please email <a href="mailto:callum.nelson95@gmail.com">Callum Nelson</a> if you have any questions.</p>
+		      </div>
+		    </div>
+
+		    <div class="container">
+		      <!-- Example row of columns -->
+		      <div class="row">
+		        <div class="col-md-6">
+		          <h2>Add a new survey</h2>
+		          <p>Select the name of the program and the year. Enter the survey ID from qualtrics.</p>
+		          <form class="script-run" action="/run" method="post">
+					  <div class="row">
+					    <div class="form-group col-md-4">
+					    	<select id="inputState" class="form-control">
+						      	<option selected>Select program</option>
+						        <option>DWI</option>
+						        <option>DWJ</option>
+						        <option>DWH</option>
+						        <option>DWAU</option>
+						        <option>DWO</option>
+						        <option>DWA</option>
+						    </select>
+					    </div>
+					    <div class="form-group col-md-4">
+						    <select id="inputState" class="form-control">
+						      	<option selected>Select year</option>
+						        <option>2017</option>
+						        <option>2018</option>
+						        <option>2019</option>
+						        <option>2020</option>
+						    </select>
+					    </div>
+					    <div class="form-group col-md-4">
+					      <input type="text" class="form-control" placeholder="Survey ID">
+					    </div>
+					  </div>
+					  <div class="row">
+					  	<div class="col-md-4"></div>
+					  	<div class="form-group col-md-4">
+					  		<button type="submit" class="btn btn-success" value="submit">Submit</button> 
+					  	</div>
+					  	</div>
+					  	<div class="col-md-4"></div>
+				  </form>
+		        </div>
+		        <div class="col-md-6" id="table-wrapper-scroll-y">
+		          <h2>Surveys already on the dashboard</h2>
+		          <table class="table">
+					  <thead>
+					    <tr>
+					      <th scope="col">Program</th>
+					      <th scope="col">Year</th>
+					      <th scope="col">Day</th>
+					    </tr>
+					  </thead>
+					  <tbody>
+					    <tr>
+					      <td>DWH</td>
+					      <td>2018</td>
+					      <td>Group 1 Day 1</td>
+					    </tr>
+					    <tr>
+					      <td>DWH</td>
+					      <td>2018</td>
+					      <td>Group 1 Day 2</td>
+					    </tr>
+					    <tr>
+					      <td>DWH</td>
+					      <td>2018</td>
+					      <td>Group 2 Day 1</td>
+					    </tr>
+					    <tr>
+					      <td>DWH</td>
+					      <td>2018</td>
+					      <td>Group 2 Day 1</td>
+					    </tr>
+					    <tr>
+					      <td>DWH</td>
+					      <td>2018</td>
+					      <td>Group 2 Day 1</td>
+					    </tr>
+					    <tr>
+					      <td>DWH</td>
+					      <td>2018</td>
+					      <td>Group 2 Day 1</td>
+					    </tr>
+					  </tbody>
+					</table>
+		       </div>
+		      </div>
+
+		      <hr>
+		    </div> <!-- /container -->
+		    <div class="container">
+		    	<div class="col-md-12">
+		    		<p><a class="btn btn-warning" href="/logout" role="button">Logout</a></p>
+		    	</div>
+		    	<footer>
+		        	<p>&copy; DataWise Harvard</p>
+		     	</footer>
+		    </div>
 		<% } %>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	    <script src="../js/home.js"></script>
+		<!-- Bootstrap core JavaScript
+	    ================================================== -->
+	    <!-- Placed at the end of the document so the pages load faster -->
+	    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+	    <script src="../../dist/js/bootstrap.min.js"></script>
+	    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 	</body>
 </html>
 
