--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
 		          <form class="script-run" action="/run" method="post">
 					  <div class="row">
 					    <div class="form-group col-md-4">
-					    	<select id="inputState" class="form-control">
+					    	<select name="program" class="form-control">
 						      	<option selected>Select program</option>
 						        <option>DWI</option>
 						        <option>DWJ</option>
@@ -38,7 +38,7 @@
 						    </select>
 					    </div>
 					    <div class="form-group col-md-4">
-						    <select id="inputState" class="form-control">
+						    <select name="year" class="form-control">
 						      	<option selected>Select year</option>
 						        <option>2017</option>
 						        <option>2018</option>
@@ -47,16 +47,18 @@
 						    </select>
 					    </div>
 					    <div class="form-group col-md-4">
-					      <input type="text" class="form-control" placeholder="Survey ID">
+					      	<input type="text" name="day" class="form-control" placeholder="Day (optional)">
 					    </div>
 					  </div>
 					  <div class="row">
-					  	<div class="col-md-4"></div>
+					  	<div class="col-md-4">
+					  		<input type="text" name="survey_id" class="form-control" placeholder="Survey ID">
+					  	</div>
 					  	<div class="form-group col-md-4">
 					  		<button type="submit" class="btn btn-success" value="submit">Submit</button> 
 					  	</div>
-					  	</div>
 					  	<div class="col-md-4"></div>
+					  </div>
 				  </form>
 		        </div>
 		        <div class="col-md-6" id="table-wrapper-scroll-y">
