--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,25 @@
 </head>
 	<body>
 		<% if (!user) { %>
-			<p id="welcome">Welcome! Please <a href="/login">log in</a>.</p>
+		<div id="welcome-page" class="site-wrapper">
+
+	      <div class="site-wrapper-inner">
+
+	        <div class="cover-container">
+
+	          <div class="inner cover">
+	            <h1 class="cover-heading">Data Wise Project</h1>
+	            <p class="lead">Please login to add survey data to the Data Wise dashboard.</p>
+	            <p class="lead">
+	              <a href="/login" class="btn btn-lg btn-primary">Login</a>
+	            </p>
+	          </div>
+
+	        </div>
+
+	      </div>
+
+	    </div>
 		<% } else { %>
 			<div class="jumbotron">
 		      <div class="container">
@@ -54,7 +72,7 @@
 					  	<div class="col-md-4">
 					  		<input type="text" name="survey_id" class="form-control" placeholder="Survey ID">
 					  	</div>
-					  	<div class="form-group col-md-4">
+					  	<div id="submit-button" class="form-group col-md-4">
 					  		<button type="submit" class="btn btn-success" value="submit">Submit</button> 
 					  	</div>
 					  	<div class="col-md-4"></div>
@@ -109,9 +127,9 @@
 
 		      <hr>
 		    </div> <!-- /container -->
-		    <div class="container">
+		    <div id="footer" class="container">
 		    	<div class="col-md-12">
-		    		<p><a class="btn btn-warning" href="/logout" role="button">Logout</a></p>
+		    		<p><a class="btn btn-danger" href="/logout" role="button">Logout</a></p>
 		    	</div>
 		    	<footer>
 		        	<p>&copy; DataWise Harvard</p>
