--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,11 +4,6 @@
  */
 
 /* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
 
 /* Custom default button */
 .btn-secondary,
@@ -25,7 +20,7 @@ a:hover {
 }
 
 #table-div {
-  height: 180px;
+  height: 280px;
 }
 /*
  * Base structure
@@ -40,7 +35,7 @@ body h2{
   text-align: center;
 }
 
-#submit-button, #reset-button, #footer, #welcome-page{
+#submit-button, #reset-button, #footer, #welcome-page, #logout-button{
   text-align: center;
 }
 
