Added survey ID verification

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -89,7 +89,7 @@
 				  <br>
 				  <div class="row">
 				  	<div class="col-md-12">
-				  		<p><b>Step 4: </b>Before you submit, check the table to the right to make sure that the survey you have selected hasn't already been added to the dashboard (you may have to scroll to see all the rows in the table.</p>
+				  		<p><b>Step 4: </b>Before you submit, check the table to the right to make sure that the survey you have selected hasn't already been added to the dashboard (you may have to scroll to see all the rows in the table).</p>
 				  	</div>
 				  </div>
 				  <div class="row">
