Still working on ID checking

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,7 +64,7 @@
 				  </div>
 				  <div class="row">
 				  	<div class="col-md-12">
-				  		<p><b>Step 2: </b>If applicable, enter the day of the survey. Otherwise, leave blank.</p>
+				  		<p><b>Step 2: </b>If applicable, enter the day of the survey. Otherwise, enter N/A.</p>
 				  	</div>
 				  </div>
 				  <div class="row">
