--- a/views/home.ejs
+++ b/views/home.ejs
@@ -76,7 +76,7 @@
 				  </div>
 				  <div class="row">
 				  	<div class="col-md-12">
-				  		<p><b>Step 3: </b>Retrieve the survey ID from <a href="https://qualtrics.harvard.edu" target="_blank">qualtrics</a> and copy it into this text box. To find the survey ID in qualtrics, click the account icon in the top right corner, then choose account settings. Survey IDs are under the Qualtrics IDs tab.</p>
+				  		<p><b>Step 3: </b>Retrieve the survey ID from <a href="https://surveytools.harvard.edu/" target="_blank">qualtrics</a> and copy it into this text box. To find the survey ID in qualtrics, click the account icon in the top right corner, then choose account settings. Survey IDs are under the Qualtrics IDs tab.</p>
 				  	</div>
 				  </div>
 				  <div class="row">
