--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,6 +36,9 @@
 		      </div>
 		    </div>
 		    <div class="container">
+		      <div class="popup">
+			    <span class="popuptext" id="myPopup">Loading...</span>
+			  </div>
 		      <div class="row">
 		        <div class="col-md-6">
 		          <h2>Add a new survey</h2>
