--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,9 +36,13 @@
 		      </div>
 		    </div>
 		    <div class="container">
-		      <div class="popup">
-			    <span class="popuptext" id="myPopup">Loading...</span>
-			  </div>
+		      <div id="myModal" class="modal">
+				  <!-- Modal content -->
+				  <div class="modal-content">
+				    <p>Loading...</p>
+				  </div>
+
+				</div>
 		      <div class="row">
 		        <div class="col-md-6">
 		          <h2>Add a new survey</h2>
