--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,6 +57,7 @@
 					        <option>DWAU</option>
 					        <option>DWO</option>
 					        <option>DWA</option>
+					        <option>DWS</option>
 					    </select>
 				    </div>
 				    <div class="form-group col-md-6">
@@ -66,6 +67,8 @@
 					        <option>2018</option>
 					        <option>2019</option>
 					        <option>2020</option>
+					        <option>2021</option>
+					        <option>2022</option>
 					    </select>
 				    </div>
 				  </div>
